selenium-hub-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: selenium
  name: selenium-hub
  labels:
    app: selenium-hub
    role: hub
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: selenium-hub
        role: hub
    spec:
      containers:
      - name: selenium-hub
        image: selenium/hub:3.7.1
        imagePullPolicy: Always
        ports:
          - containerPort: 4444
            name: http
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: compute
                operator: In
                values:
                - "true"
            topologyKey: "kubernetes.io/hostname"
