selenium-hub-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: selenium-hub
  labels:
    app: selenium-hub
    role: hub
spec:
  serviceName: "selenium-hub"
  replicas: 2
  template:
    metadata:
      labels:
        app: selenium-hub
        role: hub
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - selenium-hub
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: selenium-hub
        image: selenium/hub:3.7.1
        imagePullPolicy: Always
        ports:
          - containerPort: 4444
            name: http
        volumeMounts:
          - name: data
            mountPath: /data/selenium-hub
      volumes:
        - name: data
          emptyDir: {}
      restartPolicy: Always
