selenium-node-chrome-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: selenium-node-chrome
  labels:
    app: selenium-node-chrome
    role: node
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: selenium-node-chrome
        role: node
        kind: chrome
    spec:
      containers:
      - name: selenium-node-chrome
        image: selenium/node-chrome:3.7.1
