selenium-node-chrome-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: selenium-node-chrome
  labels:
    app: selenium-node-chrome
    role: node
spec:
  serviceName: "selenium-node-chrome"
  replicas: 1
  template:
    metadata:
      labels:
        app: selenium-node-chrome
        role: node
        kind: chrome
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "role"
                operator: In
                values:
                - node
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: selenium-node-chrome
        image: selenium/node-chrome:3.7.1
        args:
          - "-hub http://192.168.56.101:4444"
        volumeMounts:
          - name: data
            mountPath: /data/selenium-node-chrome
      volumes:
        - name: data
          emptyDir: {}
      restartPolicy: Always
