selenium-hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  labels:
    app: selenium-hub
    role: hub
spec:
  ports:
  - port: 4444
    targetPort: 4444
    name: http
  selector:
    app: selenium-hub
    role: hub
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 192.168.56.100
      - ip: 192.168.56.101
